--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "npx ts-node ./prisma/seed.ts"
+  },
   "dependencies": {
     "@prisma/client": "5.13.0",
     "next": "14.2.3",
@@ -17,6 +20,7 @@
     "zod": "3.23.6"
   },
   "devDependencies": {
+    "@faker-js/faker": "8.4.1",
     "@types/node": "20",
     "@types/react": "18",
     "@types/react-dom": "18",
